--- a/Header/header.html
+++ b/Header/header.html
@@ -31,7 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -42,6 +42,11 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">SignUp</a>
             </li>
           </ul>
         </div>
