--- a/Header/header.html
+++ b/Header/header.html
@@ -41,7 +41,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="/day9/Gallery/gallery.php">Gallery</a>
             </li>
           </ul>
           <ul class="navbar-nav">
